# streamlet

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
crates/streamlet/: Cargo.toml
crates/streamlet-derive/: Cargo.toml
crates/streamlet-derive/src/: lib.rs
crates/streamlet-restate/: Cargo.toml
crates/streamlet-restate/src/: lib.rs
crates/streamlet/benches/: event_store.rs
crates/streamlet/src/: aggregate.rs  command.rs  error.rs  event.rs  handler.rs  ids.rs  lib.rs  macros.rs  service.rs  snapshot.rs  subscription.rs  testing.rs  upcast.rs
crates/streamlet/src/store/: libsql.rs  memory.rs  mod.rs  projection.rs
crates/streamlet/tests/: advanced.rs  derive_names.rs  proptests.rs  store_conformance.rs  typed_commands.rs
examples/bank-account/: Cargo.toml
examples/bank-account/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/durable-account/: Cargo.toml
examples/durable-account/src/: main.rs
examples/restate-counter/: Cargo.toml
examples/restate-counter/src/: main.rs
