[package]
name = "restate-counter-example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
streamlet = { workspace = true }
streamlet-restate = { workspace = true }
restate-sdk.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "restate-counter"
path = "src/main.rs"
